# MAGEWORFLOW3

./: CMakeLists.txt  ConversionWorker.cpp  ConversionWorker.h  GUI.cpp  GUI.h  Utils.cpp  Utils.h  main.cpp  setup.iss
.github/workflows/: build.yml
